objects/SWIFT_Message__c.object
<CustomObject>
    <description>RN - CloudSmiths 
Object stores new and updated SWIFT Messages related to a Payments Case</description>
    <fields>
        <fullName>Answers__c</fullName>
        <label>Answers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ApproveMessage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SWIFT_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BusinessEntity__c</fullName>
        <defaultValue>&quot;IBCCARE&quot;</defaultValue>
        <description>RN - CloudSmiths</description>
        <label>Business Entity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>RN - CloudSmiths - Related payments case</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>SWIFT Messages</relationshipLabel>
        <relationshipName>SWIFT_Messages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DateOfOriginalMessage__c</fullName>
        <description>Date of the original message</description>
        <label>Date of Original Message</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DestinationAddress__c</fullName>
        <label>Destination Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBPReference__c</fullName>
        <description>RN - GBP Ref from the parent Case record</description>
        <formula>Case__r.SWIFT_GBP_Reference__c</formula>
        <label>ABSA Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsOriginalMessage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RN - CloudSmiths - indicator that this was the original query message</description>
        <label>Is Original Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT_the_Original_Message__c</fullName>
        <label>MT &amp; the Original Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MessageFlowDirection__c</fullName>
        <description>RN - CloudSmiths - Indicator that shows if a message came in via the SF API or was sent out via the Meridian API from SF</description>
        <label>Message Flow Direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In</fullName>
                </value>
                <value>
                    <fullName>Out</fullName>
                </value>
                <value>
                    <fullName>Undefined</fullName>
                    <default>true</default>
                    <label>Undefined</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MessageType__c</fullName>
        <label>Message Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>192</fullName>
                </value>
                <value>
                    <fullName>195</fullName>
                </value>
                <value>
                    <fullName>196</fullName>
                </value>
                <value>
                    <fullName>199</fullName>
                </value>
                <value>
                    <fullName>292</fullName>
                </value>
                <value>
                    <fullName>295</fullName>
                </value>
                <value>
                    <fullName>296</fullName>
                </value>
                <value>
                    <fullName>299</fullName>
                </value>
                <value>
                    <fullName>999</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <formula>&quot;{1:&quot; + Sender_Address__c + &quot;}&quot; + BR() + &quot;{2:&quot; + DestinationAddress__c + &quot;}&quot; + BR() + &quot;{20:&quot; + TransactionReference__c + &quot;}&quot; + BR() + &quot;{21:&quot; + RelatedReference__c + &quot;}&quot; + BR() + &quot;{76:&quot; + Answers__c + &quot;}&quot; + BR() + &quot;{79:&quot; + Narrative__c + &quot;}&quot;</formula>
        <label>Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Narrative_OriginalMsg__c</fullName>
        <label>Narrative OriginalMsg</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Narrative__c</fullName>
        <label>Narrative</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OriginalMessage__c</fullName>
        <label>Original Message</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OriginalSWIFTId__c</fullName>
        <formula>Case__r.SWIFTId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original SWIFT Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentMessage__c</fullName>
        <description>RN - CloudSmiths</description>
        <label>Payment Message</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Queries__c</fullName>
        <label>Queries</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QueryMessage__c</fullName>
        <description>RN - CloudSmiths</description>
        <label>Query Message</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RejectMessage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RelatedReference__c</fullName>
        <description>RN - CloudSmiths</description>
        <label>Related Reference</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SWIFTMessage__c</fullName>
        <description>RN - New SWIFT messages sent from SF</description>
        <label>SWIFT Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sender_Address__c</fullName>
        <defaultValue>&quot;ABSAZAJ0AXXX&quot;</defaultValue>
        <label>Sender Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusUpdate__c</fullName>
        <description>RN - CloudSmiths - Successes or failure and message response from Meridian when pushing SWIFT messages out from SF</description>
        <label>Status Update</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TransactionReference__c</fullName>
        <description>RN - CloudSmiths</description>
        <label>Transaction Reference</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidApprovers__c</fullName>
        <label>Valid Approvers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SWIFT Message</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Case__c</columns>
        <columns>NAME</columns>
        <columns>MessageType__c</columns>
        <columns>Sender_Address__c</columns>
        <columns>TransactionReference__c</columns>
        <columns>QueryMessage__c</columns>
        <columns>RelatedReference__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MessageFlowDirection__c</field>
            <operation>equals</operation>
            <value>Out</value>
        </filters>
        <label>All</label>
        <sharedTo>
            <group>Payment_Queues</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X1_Awaiting_Approval</fullName>
        <columns>NAME</columns>
        <columns>BusinessEntity__c</columns>
        <columns>GBPReference__c</columns>
        <columns>Sender_Address__c</columns>
        <columns>MessageType__c</columns>
        <columns>RelatedReference__c</columns>
        <columns>TransactionReference__c</columns>
        <columns>DestinationAddress__c</columns>
        <columns>Narrative__c</columns>
        <columns>Queries__c</columns>
        <columns>QueryMessage__c</columns>
        <columns>Approver__c</columns>
        <columns>ApproveMessage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>SWIFT_Message__c.SWIFT_Outbound</value>
        </filters>
        <filters>
            <field>ApproveMessage__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RejectMessage__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>1. Awaiting Approval</label>
        <sharedTo>
            <group>Payment_Queues</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2_Approved</fullName>
        <columns>NAME</columns>
        <columns>GBPReference__c</columns>
        <columns>Sender_Address__c</columns>
        <columns>MessageType__c</columns>
        <columns>Message__c</columns>
        <columns>RelatedReference__c</columns>
        <columns>TransactionReference__c</columns>
        <columns>DestinationAddress__c</columns>
        <columns>Narrative__c</columns>
        <columns>Queries__c</columns>
        <columns>QueryMessage__c</columns>
        <columns>Approver__c</columns>
        <columns>ApproveMessage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ApproveMessage__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>2. Approved</label>
    </listViews>
    <listViews>
        <fullName>X3_Rejected</fullName>
        <columns>NAME</columns>
        <columns>GBPReference__c</columns>
        <columns>Sender_Address__c</columns>
        <columns>MessageType__c</columns>
        <columns>RelatedReference__c</columns>
        <columns>TransactionReference__c</columns>
        <columns>DestinationAddress__c</columns>
        <columns>Narrative__c</columns>
        <columns>Answers__c</columns>
        <columns>QueryMessage__c</columns>
        <columns>Queries__c</columns>
        <columns>Approver__c</columns>
        <columns>RejectMessage__c</columns>
        <columns>ApproveMessage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RejectMessage__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>3. Rejected</label>
        <sharedTo>
            <group>Payment_Queues</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Message Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SWIFT Messages</pluralLabel>
    <recordTypes>
        <fullName>SWIFT_Inbound</fullName>
        <active>true</active>
        <description>Read Only record type</description>
        <label>SWIFT Inbound</label>
    </recordTypes>
    <recordTypes>
        <fullName>SWIFT_Outbound</fullName>
        <active>true</active>
        <description>Record type for outbound messages</description>
        <label>SWIFT Outbound</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>